fix container overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -46,10 +46,12 @@ p, a, span { font-size: 1.75rem; }
 /* Layout related */
 .page-wrapper {
     width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     /* max-width: 1024px; */
     padding: 2rem 0;
+    min-height: 0;
 }
 
 .page-content {
