--- a/src/stylesheets/Home.css
+++ b/src/stylesheets/Home.css
@@ -1,24 +1,31 @@
 .home-layout {
     display: flex;
-    gap: 1.5rem;
+    gap: .5rem;
     height: 100%;
+    min-height: 0;
 }
 
 section {
-    flex: 1;
+    flex: 1 1 0;
     overflow-x: hidden;
     min-width: 0;
     padding: .25rem 1rem;
+    display: flex;
+    flex-direction: column;
+    min-height: 0;
 }
 
 .conversion-section,
 .calculation-section {
+    flex: 1 1 0;
     display: flex;
     flex-direction: column;
     gap: 1.5rem;
-    max-height: 600px;
-    overflow-y: scroll;
+    min-height: 0;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
+
 .calculation-section::-webkit-scrollbar {
     width: 8px;
 }
